fix standard theme badges so that they stand on top left corner instead of top right: each element's width  in the list seems to be double the size of the image, so right alignment gets tricky. https://github.com/janeczku/calibre-web/pull/986#issuecomment-517999218 suggests top-left alignment which does make a lot of sense. Using this for now. Maintainer might have a better idea to fix it

--- a/cps/static/css/style.css
+++ b/cps/static/css/style.css
@@ -66,8 +66,8 @@ span.glyphicon.glyphicon-tags {padding-right: 5px;color: #999;vertical-align: te
 .cover { margin-bottom: 10px;}
 .cover .badge{
    position: absolute;
-   top: 10px;
-   right: 10px;
+   top: 2px;
+   left: 2px;
    background-color: #45b29d;
 }
 .cover-height { max-height: 100px;}
